5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1871_1713.log
== TEST (2019-07-02 16:30:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas")))
media=0
for i in range(shape(matriz)[0]):
	for j in range (shape(matriz)[1]):
		ma = ma + matriz[i:,0]*ma[i:,1]
print(round(ma,2))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas")))
media=0
for i in range(shape(matriz)[0]):
		ma = ma + matriz[i,0]*ma[i,1]
print(round(ma,2))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:31:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
media=0
for i in range(shape(matriz)[0]):
		ma = ma + matriz[i,0]*ma[i,1]
print(round(ma,2))		

-- EXECUTION TIME:
0.874982
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1713/main.py", line 6, in <module>
    ma = ma + matriz[i,0]*ma[i,1]
TypeError: 'module' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
media=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0]*ma[i,1]
print(round(ma,2))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:11) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0]*ma[i,1]
print(round(ma,2))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + (matriz[i,0]*ma[i,1])
print(round(ma,2))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,0]* matriz[i,1]
print(round(ma,2))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:34:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,1]* matriz[i,1]
print(round(ma,2))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,1] * matriz[i,1]
media = ma / shape(matriz)[0] 
	print(round(ma,2))		

-- ERROR:
File "XXXX", line 8
    print(round(ma,2))		
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,1] * matriz[i,1]
media = ma / shape(matriz)[0] 
	print(round(ma,2))		

-- ERROR:
File "XXXX", line 8
    print(round(ma,2))		
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,1] * matriz[i,1]
media = ma / shape(matriz)[0] 
	print(round(ma,2))		

-- ERROR:
File "XXXX", line 8
    print(round(ma,2))		
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,1] * matriz[i,1]
media = ma / shape(matriz)[0] 
	print(round(ma,2))		

-- ERROR:
File "XXXX", line 8
    print(round(ma,2))		
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:38:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,1] * matriz[i,1]
media = ma / shape(matriz)[0] 
	print(round(media,2))		

-- ERROR:
File "XXXX", line 8
    print(round(media,2))		
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,1] * matriz[i,1]
	media = ma / shape(matriz)[0] 
	print(round(media,2))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:39:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
matriz=array(eval(input("Matriz de notas:")))
ma=0
for i in range(shape(matriz)[0]):
	ma = ma + matriz[i,1] * matriz[i,1]
	media = ma / shape(matriz)[0] 
print(round(media,2))		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
